--- a/styles/NavBar.module.css
+++ b/styles/NavBar.module.css
@@ -65,3 +65,15 @@
     margin: 0 0 0 10px;
   }
 }
+
+/* for iPhone SE & 6, 7, 8 */
+@media only screen and (max-width: 380px) {
+  .homeIcon {
+    font-size: large;
+    font-weight: 800;
+  }
+
+  .navMenuName {
+    font-size: 1.1rem;
+  }
+}
